# csv2pq

./: .gitignore  Cargo.toml  LICENSE_APACHE.md  LICENSE_MIT.md  README.md
src/: lib.rs  main.rs  rewindable_reader.rs  tempfile.rs
