[package]
name = "csv2pq"
version = "0.1.1"
edition = "2024"
authors = ["Dmitry Mottl"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Mottl/csv2pq"
description = "CSV to Apache parquet converter"

[dependencies]
anyhow = "1.0.97"
arrow-csv = "54.3.0"
arrow-schema = { version = "54.3.0", features=["serde"] }
clap = { version="4.5.34", features=["derive"] }
flate2 = { version = "1.1.0", features = ["zlib-ng"] }
parquet = "54.3.0"
serde_json = "1.0.140"
